feat(core): 优化应用核心功能并修复多项问题
- 在BaseActivity中修复辅助服务启用/禁用时的空字符串处理问题
- 使用Math.clamp替代手动范围限制实现缩放功能
- 为选择执行浮窗添加超时功能和倒计时显示
- 扩展日期/时间操作类支持自定义时间戳输入
- 优化节点存在性检查中的字符串处理逻辑
- 修复截图服务中的资源管理和异常处理问题
- 添加新的计数器图标资源文件
- 为定时启动操作添加日志显示选项
- 修复图像触摸操作中的模板匹配算法参数问题
- 优化颜色引脚小部件的数据绑定逻辑
- 修复变量选择对话框中的类型检查方式
- 改进文字转语音操作的执行流程控制